2012-03-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme
	  Barrientos!
	* theme.py: Added support for user theme directory.
	  (~/.config/gfeedline/theme/)

2012-03-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twittytwister/streaming.py: Added support for Twitter activity
	  streaming.

2012-03-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.1 beta 1 release.
	* it_IT.po: Added new Italian translation.  Thanks Daniele Napolitano!
	* et.po: Updated Estonian translation.  Thanks Rivo Zängov!

2012-03-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twittytwister/twitter.py, twittytwister/txml.py: Added supoort
	  for help/configuration API.

2012-03-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py, window.py: Added support for Drag and Drop image files.

2012-03-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py: Added support for image uploading.
	* twitter/account.py, twittytwister/twitter.py: Added support for
	  'update_with_image'.

2012-03-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py: Added support for fullscreen mode.
	* twitter/output.py, window.py: Save last IDs for cheking unread.
	* theme.py, view.py: Added an option for the Timeline font.
	* preferences.py: Added an option for the Timeline order.

2012-03-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/output.py: Added source filters.
	* twitter/tweetentry.py: Adds 'mine' class for user own messages.
	* view.py: Added support for dynamic loading of themes.

2012-03-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py, view.py: Added support for D&D URI links.

2012-03-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* key.png, key.svg, updatewindow.py: Added a protected icon.
	* twitter/tweetentry.py: Added support for full user name.

2012-02-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* menu.py: Added a menu item for adding filters.
