@@ -5,6 +5,7 @@ lib/plugins/twitter/api.py
 lib/plugins/twitter/assistant.py
 lib/plugins/twitter/output.py
 lib/plugins/twitter/tweetentry.py
+lib/preferences/feedsource.py
 lib/updatewindow.py
 share/assistant_twitter.glade
 share/feedsource.glade
