@@ -1,3 +1,7 @@
+2012-03-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* feedsource.py: Added an Options tab to Feed Source Dialog.
+
 2012-03-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme
